ref: use of Java 21 best practices and features, including records, sealed interfaces, pattern matching, and other improvements